<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.StartUpScreen"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:src="@drawable/circle_image"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:textAlignment="center"
            android:fontFamily="@font/brandon_grotesque_bold_italic"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                android:background="@color/teal_200"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/sign_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="callSignupScreen"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:transitionName="transition_signup"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_weight="1"/>


        
    </LinearLayout>

</ScrollView>