<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.VerifyOTP"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_close_icon"
            android:padding="5dp"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_text_code"
            android:textSize="100sp"
            android:textColor="@color/black"
            android:fontFamily="@font/brandon_grotesque_bold_italic"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verif_code"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/brandon_grotesque_bold_italic"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_desc_code"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/brandon_grotesque_black"

            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/colorAccent"
            android:itemBackground="@color/lightWhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="Verify Code"
            android:textSize="20dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/black"/>






    </LinearLayout>

</ScrollView>