<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.MakeSelection"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_select"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/brandon_grotesque_bold_italic"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selection_detail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/brandon_grotesque_light"
            android:layout_marginTop="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/phone"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>


            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/brandon_grotesque_light"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="some nmb"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mail"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>


            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/brandon_grotesque_light"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="some mail"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>